# siliconworm

./: .gitignore  .oxlintrc.json  README.md  components.json  next.config.ts  package.json
.github/workflows/: ci-python.yml  publish-python.yml
docs/superpowers/plans/: 2026-06-03-marketing-split-and-drizzle-wiring.md
docs/superpowers/specs/: 2026-06-03-marketing-split-and-drizzle-wiring-design.md
scripts/: seed.ts
scripts/_seed-fixtures/: demo-run.ts  mock.ts  workspace-mock.ts
sdk/python/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
sdk/python/examples/: mnist.py  quickstart.py
sdk/python/siliconworm/: __init__.py  client.py  run.py  version.py
sdk/python/silkworm/: __init__.py  client.py  env.py  run.py  version.py
src/app/: globals.css  layout.tsx
src/app/(app)/: page.tsx
src/app/(app)/alerts/: page.tsx
src/app/(app)/artifacts/: page.tsx
src/app/(app)/runs/: page.tsx
src/app/(app)/sweeps/: page.tsx
src/app/(marketing)/: layout.tsx  page.tsx
src/app/dashboard/: layout.tsx  page.tsx
src/app/dashboard/alerts/: page.tsx
src/app/dashboard/artifacts/: page.tsx
src/app/dashboard/runs/: page.tsx
src/app/dashboard/sweeps/: page.tsx
src/components/: brand.tsx
src/components/app/: page-header.tsx  sidebar.tsx
src/components/charts/: metric-chart.tsx
src/components/marketing/: overlay-chart.tsx  overlay-demo.tsx
src/components/ui/: kbd.tsx  pill.tsx  sparkline.tsx  status-dot.tsx  tick-rule.tsx
src/lib/: db.ts  demo-ids.ts  schema.ts  utils.ts
src/lib/queries/: index.ts  projects.ts  runs.ts  workspace.ts
(+11 files in other folders)
