[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "silkworm"
dynamic = ["version"]
description = "Research-grade experiment tracking SDK for the Silkworm dashboard."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Silkworm Labs" }]
keywords = ["machine-learning", "experiment-tracking", "mlops", "metrics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Zero required deps — stdlib only. urllib for the optional HTTP client.
dependencies = []

[project.optional-dependencies]
# `pip install silkworm[torch]` enables the helper that converts torch
# tensors / numpy scalars to plain Python floats inside .log().
torch = ["torch>=2.0"]
numpy = ["numpy>=1.24"]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/aryan-shubh/silkworm"
Source = "https://github.com/aryan-shubh/silkworm"
Issues = "https://github.com/aryan-shubh/silkworm/issues"

[tool.hatch.version]
path = "silkworm/version.py"

[tool.hatch.build.targets.wheel]
packages = ["silkworm"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
